--- a/styles/styles.css
+++ b/styles/styles.css
@@ -86,7 +86,7 @@ body.appear {
 }
 
 main {
-  margin-top: 128px;
+  margin-top: 124px;
 }
 
 header .header,
